# turtlebot_speechrecognition

./: .project  README.md
TurtleBotSpeechRecognition/: .cproject  .project
TurtleBotSpeechRecognition/Debug/: makefile
TurtleBotSpeechRecognition/Debug/src/: TurtleBotSpeechRecognition.d  subdir.mk
TurtleBotSpeechRecognition/src/: Roboter_go_to_the_lab_02_ohne.raw  TurtleBotSpeechRecognition  TurtleBotSpeechRecognition.cpp  grammar.gram  grammar.jsgf
libs/pocketsphinx-5prealpha/: Makefile  config.status  libtool
libs/pocketsphinx-5prealpha/autom4te.cache/: requests
libs/pocketsphinx-5prealpha/doc/: Makefile
libs/pocketsphinx-5prealpha/include/: Makefile
libs/pocketsphinx-5prealpha/model/: Makefile
libs/pocketsphinx-5prealpha/src/: Makefile
libs/pocketsphinx-5prealpha/src/gst-plugin/: Makefile
libs/pocketsphinx-5prealpha/src/libpocketsphinx/: Makefile  libpocketsphinx.la
libs/pocketsphinx-5prealpha/src/programs/: Makefile  pocketsphinx_batch  pocketsphinx_continuous  pocketsphinx_mdef_convert
libs/pocketsphinx-5prealpha/swig/: Makefile
libs/pocketsphinx-5prealpha/swig/python/: Makefile  _pocketsphinx.la
libs/pocketsphinx-5prealpha/test/: Makefile  testfuncs.sh
libs/pocketsphinx-5prealpha/test/regression/: Makefile
libs/pocketsphinx-5prealpha/test/unit/: Makefile
libs/sphinxbase-5prealpha/: Makefile  config.status  libtool
libs/sphinxbase-5prealpha/autom4te.cache/: requests
libs/sphinxbase-5prealpha/doc/: Makefile
libs/sphinxbase-5prealpha/include/: Makefile  config.h
libs/sphinxbase-5prealpha/include/sphinxbase/: Makefile
libs/sphinxbase-5prealpha/src/: Makefile
libs/sphinxbase-5prealpha/src/libsphinxad/: Makefile  ad_pulse.lo  libsphinxad.la
libs/sphinxbase-5prealpha/src/libsphinxbase/: Makefile  libsphinxbase.la
libs/sphinxbase-5prealpha/src/sphinx_adtools/: Makefile  sphinx_cont_seg  sphinx_pitch
libs/sphinxbase-5prealpha/src/sphinx_cepview/: Makefile  sphinx_cepview
libs/sphinxbase-5prealpha/src/sphinx_fe/: Makefile  sphinx_fe
libs/sphinxbase-5prealpha/src/sphinx_jsgf2fsg/: Makefile  sphinx_jsgf2fsg
libs/sphinxbase-5prealpha/src/sphinx_lmtools/: Makefile  sphinx_lm_convert  sphinx_lm_eval
libs/sphinxbase-5prealpha/swig/: Makefile
libs/sphinxbase-5prealpha/swig/python/: Makefile  _sphinxbase.la
libs/sphinxbase-5prealpha/test/: Makefile
libs/sphinxbase-5prealpha/test/regression/: Makefile  testfuncs.sh
libs/sphinxbase-5prealpha/test/unit/: Makefile  testfuncs.sh
test_ros/devel/: .catkin  .rosinstall  setup.sh
test_ros/devel/include/speechrecognition/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
test_ros/devel/lib/pkgconfig/: speechrecognition.pc
test_ros/src/speechrecognition/: CMakeLists.txt  package.xml
test_ros/src/speechrecognition/src/: TurtleBotSpeechRecognition  TurtleBotSpeechRecognition.cpp  grammar.gram
(+98 files in other folders)
